Simon Wood                                              06 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Sun Jan 20 12:15:18 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Version number display actually committed.
	* Formatting clean-ups in Menuconfig script.

Sun Jan 20 01:09:25 EET 2002	Jacek Lipkowski <sq5bpf@acid.ch.pw.edu.pl>

	* Menuconfig non compilable fix.
	* Better version number display for menuconfig.

Fri Jan 18 23:22:10 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Updated TODO list from suggestions received.

Mon Jan 14 16:18:21 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* OOPS: Previous commit accidentally omitted a patch - applied.
	* Complete dependency checking - `make nodep` skipped two of the
	  Makefiles due to a spelling mistake.
	* Arranged for `make test` to produce comparable distributions
	  before and after the compilation run - previously, the after
	  distribution always included the dependencies and the before
	  distribution did not.

Sun Jan 13 22:37:14 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* This is ELKS 0.1.0-pre4

	* Move serial ports from device minors 4-7 to 64-67 to allow for
	  more virtual terminals (currently limited by the minors for
	  the serial ports).
	* Made `make clean` actually clean up *.a files.
	* Fixed warning in scripts/lxdialog/dialog.c about invalid syntax
	  of #include line.

Wed Dec 26 17:09:16 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Brought include/linuxmt/autoconf.h in the repository up to date
	  with respect to what is generated - but is this file meant to
	  be in the repository in the first place?

Wed Dec 12 22:52:34 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Renamed variables used in Makefile-rules to generalise it for use
	  in non-ELKS systems, as follows:

		ELKSDIR => BASEDIR
		ELKSSTD => USEBCC
